--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,16 @@ body {
   background-color: black;
 }
 
+h1 {
+  font-size: 24px;
+}
+
+p {
+  color: var(--light-grey);
+  font-size: 14px;
+  line-height: 1.5em;
+}
+
 .rating-container {
   width: 280px;
   height: 310px;
