--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,12 @@ p {
   height: auto;
 }
 
+#rating-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #rating-form > * {
   margin-bottom: 28px;
 }
