--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
 }
 
 h1 {
+  letter-spacing: 1px;
   font-size: 24px;
 }
 
@@ -183,12 +184,62 @@ input[type="radio"]:hover + label span {
   height: auto;
 }
 
-/* Mobile */
-@media (min-width: 375px) {
-
-}
-
 /* Desktop */
 @media only screen and (min-width: 1440px) {
+  .rating-container {
+    width: 350px;
+    height: 350px;
+    padding: 30px;
+    border-radius: 30px;
+  }
 
+  h1 {
+    font-size: 28px;
+    letter-spacing: 1px;
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  .rating-badge {
+    height: 50px;
+    width: 50px;
+    margin-bottom: 30px;
+  }
+
+  .custom-radios {
+    width: 340px;
+  }
+
+  #rating-submit {
+    width: 340px;
+    height: 45px;
+    margin-bottom: 35px;
+  }
+
+  input[type="radio"]+label span {
+    width: 50px;
+    height: 50px;
+    margin: 0px 12px;
+  }
+
+  .rating-confirm img {
+    margin: 14px 0px 30px 0px;
+  }
+
+  .rating-confirm-text {
+    width: 190px;
+    margin-bottom: 26px;
+    font-size: 15px;
+  }
+
+  .rating-confirm h1 {
+    margin: 10px 0;
+  }
+
+  .rating-confirm p {
+    font-size: 15px;
+    width: 340px;
+  }
 }
